@testing-library/jest-domを追加

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/react": "^8.2.8",
     "@storybook/test": "^8.2.8",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
