--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "eslint-config-next": "14.2.5",
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.1.1",
+    "msw": "^2.3.5",
     "postcss": "^8",
     "storybook": "^8.2.8",
     "tailwindcss": "^3.4.1",
@@ -52,6 +54,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
