--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.1.1",
     "msw": "^2.3.5",
+    "msw-storybook-addon": "^2.0.3",
     "postcss": "^8",
     "storybook": "^8.2.8",
     "tailwindcss": "^3.4.1",
